git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30452 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -12,6 +12,8 @@ Versions
     BookkeepingSystem = bk_2010101301
     ConfigurationSystem = cs_2010072701
 
+    # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
+
     Core = co_2010111601
 
     # CHANGE: StoragUsageAgent - make the active period configurable.
