wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30453 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -13,6 +13,7 @@ Versions
     ConfigurationSystem = cs_2010072701
 
     # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
+    # CHANGE: OutputDataPolicy.py - Use preSubmissionLFNs method in ProductionData.
 
     Core = co_2010111601
 
