wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30454 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,6 +14,7 @@ Versions
 
     # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
     # CHANGE: OutputDataPolicy.py - Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: ProductionData.py - Migrated the client LFN construction code to this utility.
 
     Core = co_2010111601
 
