wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30457 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -27,6 +27,7 @@ Versions
     DataManagementSystem = dm_2010102101
 
     # CHANGE: TransformationDBClient renamed to TransformationClient
+    # CHANGE: Production.py - Use preSubmissionLFNs method in ProductionData.
 
     Interfaces = if_2010111601
 
