wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30459 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -28,6 +28,7 @@ Versions
 
     # CHANGE: TransformationDBClient renamed to TransformationClient
     # CHANGE: Production.py - Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle.
 
     Interfaces = if_2010111601
 
