wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30461 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -28,7 +28,8 @@ Versions
 
     # CHANGE: TransformationDBClient renamed to TransformationClient
     # CHANGE: Production.py - Use preSubmissionLFNs method in ProductionData.
-    # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle.
+    # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle
+    # NEW: LHCbDIRAC/Interfaces/scripts - Moved scripts from ProductionManagementSystem that only depend on DiracProduction.
 
     Interfaces = if_2010111601
 
