wrong format of the file
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@30462 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -29,7 +29,7 @@ Versions
     # CHANGE: TransformationDBClient renamed to TransformationClient
     # CHANGE: Production.py - Use preSubmissionLFNs method in ProductionData.
     # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle
-    # NEW: LHCbDIRAC/Interfaces/scripts - Moved scripts from ProductionManagementSystem that only depend on DiracProduction.
+    # NEW: LHCbDIRAC/Interfaces/scripts - moved scripts from ProductionManagementSystem that only depend on DiracProduction.
 
     Interfaces = if_2010111601
 
