--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,81 @@ Versions
 
   }
   
+  v5r11
+  {
+    BookkeepingSystem = bk_2010101301
+    ConfigurationSystem = cs_2010072701
+
+    # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
+    # CHANGE: OutputDataPolicy.py - Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: ProductionData.py - Migrated the client LFN construction code to this utility.
+    # CHANGE: GaudiApplication - migrated the code to determine the number of streamed events to
+    #         ProductionLogAnalysis
+
+    Core = co_2010111601
+
+    # CHANGE: StoragUsageAgent - make the active period configurable.
+    # NEW: Created LHCbDIRAC/DataManagementSystem/Client/DataIntegrityClient.py and moved
+    #      the relevant (BK related methods) into there.
+    # NEW: dirac-dms-check-directory-integrity - script for checking directory integrity.
+    DataManagementSystem = dm_2010102101
+
+    # CHANGE: TransformationDBClient renamed to TransformationClient
+    # CHANGE: Production.py - Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle
+    # NEW: LHCbDIRAC/Interfaces/scripts - moved scripts from ProductionManagementSystem that only depend on DiracProduction.
+    # CHANGE:  Production.py - Finally resolve the replication group definition to match the 
+    #          simulation and MC merging productions. Ensure "DetailedInfo" is available 
+    #          for replication transformations.  Add the "ProcessingType" to the JDL job description. 
+    #          Ensure transformation family is correctly propagated in the MC case
+    Interfaces = if_2010111602
+
+    # CHANGE: Agent/RequestTrackingAgent.py - specialized BK methods are used to collect the information (much faster)
+    # CHANGE: Major reorganization of the code, multiple agents moved to DIRAC/Transformation system, clean-up
+    #         to avoid unnecessary redirections.
+    # CHANGE: TransformationDBClient renamed to TransformationClient
+    # NEW: added RequestTestAgent
+    # NEW: Production Request tests support
+    # CHANGE: LHCbDIRAC/ProductionManagementSystem/scripts - Some cleanup of obsoleted scripts, moved
+    #          some scripts to Interfaces.
+    ProductionManagementSystem = pm_2010111301
+
+    # NEW: Added plots and graphs to be displayed on the Sites page
+    ResourceStatusSystem = rs_2010101501
+
+    SAMSystem = sa_2010080301
+
+    # NEW: ProductionManagement split into Transformation System LHCb complement and higher level
+    #      LHCb ProductionManagement system
+    # CHANGE: TransformationHandler renamed to TransformationManagerHandler
+    # CHANGE: TransformationDBClient renamed to TransformationClient
+    # NEW: Transformation(DB,Manager).py - Added setBookkeepingQueryStartRunForTransformation() 
+    #      for throttling the reprocessing
+    # BUGFIX: TransformationPlugin - broadcast tasks defined per single target SE
+    TransformationSystem = ts_2010112201
+
+    # BUGFIX: UserJobFinalization - added protection for a rare case where the proxy information
+    #         could not be obtained in the job.
+    # CHANGE: Updated production templates
+    # CHANGE: GaudiApplication - migrated the code to determine the number of streamed events to
+    #         ProductionLogAnalysis
+    # CHANGE: FULL_RealData_Merging_run.py Reworked stream handling for the latest reprocessing.
+    #         Allow the stream lists to be set in the CS with defaults for the last reprocessing
+    #         in the template. Added an option to apply the standard computing model replication
+    #         policy to a list of streams defined in the CS. Allow to set CERN (with no replication)
+    #         for a stream list defined in the CS. Expose testFlag and recoTestData to enable running a 
+    #         local test job as part of the lhcb_tech verification phase as requested by Pete.
+    # CHANGE: Certification_Testing_run.py - Remove setting the total events and events per job to
+    #         avoid automatic extension of the MC productions. Now restrict reconstruction productions
+    #         explicitly to the MDF files produced by the MC production (via prodID).
+    # CHANGE:  MC_Simulation_run.py - Now that the requests are grouped by parent request in 
+    #          the monitoring page make the subrequest ID appear at the beginning of the production names.
+    #          For a test job use certification test for the BK name and version.
+    Workflow = wo_2010111602
+
+    WorkloadManagementSystem = wm_2010073001
+  }
+  
   v5r11-pre7
   {
     BookkeepingSystem = bk_2010101301
