--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,21 @@ Versions
   Next Release
   {
 
+    # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
+    # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
+    Interfaces = if_2010120301
+    
+    # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
+    # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    # CHANGE: MicroDST_StreamedData_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    Workflow = wo_2010120301
+
+    # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
+    Core = co_2010120301
+    
   }
   
   v5r11p1
