Migration of certification testing script CS location to a path containing the DIRAC setup to allow testing of different steps in different setups if desired.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31149 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -10,12 +10,12 @@ Versions
     Interfaces = if_2010120301
     
     # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
-    # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location. 
     # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
     # CHANGE: MicroDST_StreamedData_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
-    Workflow = wo_2010120301
+    Workflow = wo_2010120303
 
     # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
     Core = co_2010120301
