git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31163 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -20,6 +20,11 @@ Versions
     # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
     Core = co_2010120301
     
+    
+    BookkeepingSystem = bk_2010120301
+    
+    # The new bkk system is tagged
+    NewBookkeepingSystem = bk_2010120301
   }
   
   v5r11p1
@@ -48,7 +53,7 @@ Versions
     ConfigurationSystem = cs_2010072701
 
     # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
-    # CHANGE: OutputDataPolicy.pyÊ- Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: OutputDataPolicy.pyï¿½- Use preSubmissionLFNs method in ProductionData.
     # CHANGE: ProductionData.py - Migrated the client LFN construction code to this utility.
     # CHANGE: GaudiApplication - migrated the code to determine the number of streamed events to
     #         ProductionLogAnalysis
@@ -62,12 +67,12 @@ Versions
     DataManagementSystem = dm_2010102101
 
     # CHANGE: TransformationDBClient renamed to TransformationClient
-    # CHANGE: Production.pyÊ- Use preSubmissionLFNs method in ProductionData.
+    # CHANGE: Production.pyï¿½- Use preSubmissionLFNs method in ProductionData.
     # CHANGE: DiracProduction.py - Major clean up after transformation reshuffle
     # NEW: LHCbDIRAC/Interfaces/scripts - moved scripts from ProductionManagementSystem that only depend on DiracProduction.
-    # CHANGE: ÊProduction.pyÊ- Finally resolve the replication group definition to match the 
+    # CHANGE: ï¿½Production.pyï¿½- Finally resolve the replication group definition to match the 
     #          simulation and MC merging productions. Ensure "DetailedInfo" is available 
-    #          for replication transformations. ÊAdd the "ProcessingType" to the JDL job description. 
+    #          for replication transformations. ï¿½Add the "ProcessingType" to the JDL job description. 
     #          Ensure transformation family is correctly propagated in the MC case
     Interfaces = if_2010111602
 
@@ -90,7 +95,7 @@ Versions
     #      LHCb ProductionManagement system
     # CHANGE: TransformationHandler renamed to TransformationManagerHandler
     # CHANGE: TransformationDBClient renamed to TransformationClient
-    # NEW: Transformation(DB,Manager).pyÊ- Added setBookkeepingQueryStartRunForTransformation() 
+    # NEW: Transformation(DB,Manager).pyï¿½- Added setBookkeepingQueryStartRunForTransformation() 
     #      for throttling the reprocessing
     # BUGFIX: TransformationPlugin - broadcast tasks defined per single target SE
     TransformationSystem = ts_2010112201
@@ -100,16 +105,16 @@ Versions
     # CHANGE: Updated production templates
     # CHANGE: GaudiApplication - migrated the code to determine the number of streamed events to
     #         ProductionLogAnalysis
-    # CHANGE: FULL_RealData_Merging_run.pyÊReworked stream handling for the latest reprocessing.
+    # CHANGE: FULL_RealData_Merging_run.pyï¿½Reworked stream handling for the latest reprocessing.
     #         Allow the stream lists to be set in the CS with defaults for the last reprocessing
     #         in the template. Added an option to apply the standard computing model replication
     #         policy to a list of streams defined in the CS. Allow to set CERN (with no replication)
     #         for a stream list defined in the CS. Expose testFlag and recoTestData to enable running a 
     #         local test job as part of the lhcb_tech verification phase as requested by Pete.
-    # CHANGE: Certification_Testing_run.pyÊ- Remove setting the total events and events per job to
+    # CHANGE: Certification_Testing_run.pyï¿½- Remove setting the total events and events per job to
     #         avoid automatic extension of the MC productions. Now restrict reconstruction productions
     #         explicitly to the MDF files produced by the MC production (via prodID).
-    # CHANGE: ÊMC_Simulation_run.pyÊ- Now that the requests are grouped by parent request in 
+    # CHANGE: ï¿½MC_Simulation_run.pyï¿½- Now that the requests are grouped by parent request in 
     #          the monitoring page make the subrequest ID appear at the beginning of the production names.
     #          For a test job use certification test for the BK name and version.
     Workflow = wo_2010111602
