--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,9 @@ Versions
 
   Next Release
   {
+  
+    # BUFIX: Configurations.py - removed OnNodePropagation policy
+    ResourceStatusSystem = rs_2010120601
 
     # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
     # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
