--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -8,9 +8,46 @@ Versions
     # BUFIX: Configurations.py - removed OnNodePropagation policy
     ResourceStatusSystem = rs_2010120601
 
+  }
+  
+  v5r12-pre1
+  {
+    
+    BookkeepingSystem = bk_2010120301
+    
+    # NEW: The NewBookkeepingSystem  system is tagged
+    NewBookkeepingSystem = bk_2010120301
+    
+    ConfigurationSystem = cs_2010072701
+    
+    # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    Core = co_2010120301
+    
+    # CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
+    DataManagementSystem = dm_2010120601
+    
     # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
     # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
+    # NEW: new dirac-admin-grid-weather command
     Interfaces = if_2010120301
+    
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    ProductionManagementSystem = pm_2010120601
+    
+    # BUFIX: Configurations.py - removed OnNodePropagation policy
+    ResourceStatusSystem = rs_2010120601
+    
+    # FIX: SAMAgent - use self.am_setOption( 'shifterProxy', 'SAMManager' )
+    SAMSystem = sa_2010120601
+    
+    # CHANGE: BookkeepingWatchAgent - add file metadata by smal chunks as they are retrieved from the BK
+    # FIX: TransformationPlugin - correctly handle the case where the runID is null for a transformation
+    # NEW: TransformationDB - added setBookkeepingQueryStartRunForTransformation() for throttling the 
+    #      reprocessing activity; transformationID should be an integer when creating new tasks;
+    #      correctly handle the case where the runID is null when adding tasks to a transformation
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    TransformationSystem = ts_2010120601
     
     # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
     # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location. 
@@ -19,15 +56,10 @@ Versions
     # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
     Workflow = wo_2010120303
-
-    # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
-    Core = co_2010120301
     
-    
-    BookkeepingSystem = bk_2010120301
-    
-    # The new bkk system is tagged
-    NewBookkeepingSystem = bk_2010120301
+    # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    WorkloadManagementSystem = wm_2010120601
   }
   
   v5r11p1
