--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+    # BUGFIX: Production -> Transformation
+    TransformationSystem = ts_2010120701
   }
   
   v5r12-pre3
