--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -15,24 +15,29 @@ Versions
     BookkeepingSystem = bk_2010120301
 
     # NEW: cmt requirements modified
-    NewBookkeepingSystem = bk_2010120601
+    # CHANGE: AncestorFiles - updated to new BK
+    NewBookkeepingSystem = bk_2010120701
 
     ConfigurationSystem = cs_2010072701
 
     # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
     # FIX: scripts - removed obsoleted __VERSION__ variable
-    Core = co_2010120301
+    # CHANGE: dirac-lhcb-generate-catalog script updated to new BK
+    Core = co_2010120701
 
     # CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
-    DataManagementSystem = dm_2010120601
+    # NEW: Added new StorageSummaryAgent
+    DataManagementSystem = dm_2010120701
 
     # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
     # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
     # NEW: new dirac-admin-grid-weather command
-    Interfaces = if_2010120601
+    # CHANGE: DiracLHCb, Production updated to new BK
+    Interfaces = if_2010120701
 
     # FIX: scripts - removed obsoleted __VERSION__ variable
-    ProductionManagementSystem = pm_2010120601
+    # CHANGE: multiple scripts updated to new BK
+    ProductionManagementSystem = pm_2010120701
 
     # BUFIX: Configurations.py - removed OnNodePropagation policy
     ResourceStatusSystem = rs_2010120601
@@ -46,7 +51,9 @@ Versions
     #      reprocessing activity; transformationID should be an integer when creating new tasks;
     #      correctly handle the case where the runID is null when adding tasks to a transformation
     # FIX: scripts - removed obsoleted __VERSION__ variable
-    TransformationSystem = ts_2010120601
+    # CHANGE: Agents, Clients updated to new BK
+    # FIX: TransformationManager - added protection against non-existant (zero) run numbers
+    TransformationSystem = ts_2010120702
 
     # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
     # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location.
@@ -54,11 +61,14 @@ Versions
     # CHANGE: MicroDST_StreamedData_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
-    Workflow = wo_2010120303
+    # CHANGE: Modules and Templates updated to new BK
+    Workflow = wo_2010120701
 
     # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
-    WorkloadManagementSystem = wm_2010120601
+    # CHANGE: AncestorFilesAgent updated to new BK
+    # FIX: JobLogUploadAgent updated to use the new SandboxStoreClient
+    WorkloadManagementSystem = wm_2010120701
   }
 
   v5r12-pre2
