git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31841 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,12 @@ Versions
 
   Next Release
   {
+    
+    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed. 
+    BookkeepingSystem = bk_2010120901
 
+    # BUGFIX: The command line methods updated. The file transfer is fixed.
+    NewBookkeepingSystem = bk_2010120901
   }
 
   v5r12-pre6
