git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31844 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,7 +9,8 @@ Versions
     BookkeepingSystem = bk_2010120901
 
     # BUGFIX: The command line methods updated. The file transfer is fixed.
-    NewBookkeepingSystem = bk_2010120901
+    # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    NewBookkeepingSystem = bk_2010120902
   }
 
   v5r12-pre6
