--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,13 +4,74 @@ Versions
 
   Next Release
   {
-    
-    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed. 
+
+
+  }
+
+  v5r12-pre7
+  {
+    # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
     BookkeepingSystem = bk_2010120901
 
+    # NEW: cmt requirements modified
+    # CHANGE: AncestorFiles - updated to new BK
     # BUGFIX: The command line methods updated. The file transfer is fixed.
     # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
     NewBookkeepingSystem = bk_2010120902
+
+    ConfigurationSystem = cs_2010072701
+
+    # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # CHANGE: dirac-lhcb-generate-catalog script updated to new BK
+    # FIX: lhcb-proxy-init.py
+    Core = co_2010120801
+
+    # CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
+    # NEW: Added new StorageSummaryAgent
+    DataManagementSystem = dm_2010120701
+
+    # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
+    # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
+    # NEW: new dirac-admin-grid-weather command
+    # CHANGE: DiracLHCb, Production updated to new BK
+    Interfaces = if_2010120701
+
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # CHANGE: multiple scripts updated to new BK
+    ProductionManagementSystem = pm_2010120701
+
+    # BUFIX: Configurations.py - removed OnNodePropagation policy
+    ResourceStatusSystem = rs_2010120601
+
+    # FIX: SAMAgent - use self.am_setOption( 'shifterProxy', 'SAMManager' )
+    SAMSystem = sa_2010120601
+
+    # CHANGE: BookkeepingWatchAgent - add file metadata by smal chunks as they are retrieved from the BK
+    # FIX: TransformationPlugin - correctly handle the case where the runID is null for a transformation
+    # NEW: TransformationDB - added setBookkeepingQueryStartRunForTransformation() for throttling the
+    #      reprocessing activity; transformationID should be an integer when creating new tasks;
+    #      correctly handle the case where the runID is null when adding tasks to a transformation
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # CHANGE: Agents, Clients updated to new BK
+    # FIX: TransformationManager - added protection against non-existant (zero) run numbers
+    TransformationSystem = ts_2010120702
+
+    # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
+    # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    # CHANGE: MicroDST_StreamedData_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    # CHANGE: Modules and Templates updated to new BK
+    Workflow = wo_2010120701
+
+    # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    # CHANGE: AncestorFilesAgent updated to new BK
+    # FIX: JobLogUploadAgent updated to use the new SandboxStoreClient
+    WorkloadManagementSystem = wm_2010120701
   }
 
   v5r12-pre6
