git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31894 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,22 @@ Versions
 
   Next Release
   {
+  
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.   
+    # BUGFIX: I removed the pareseCommandline from the client. 
+    # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
+    BookkeepingSystem = bk_2010121301
 
+  
+    # NEW: cmt requirements modified
+    # CHANGE: AncestorFiles - updated to new BK
+    # BUGFIX: The command line methods updated. The file transfer is fixed.
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.   
+    # BUGFIX: I removed the pareseCommandline from the client. 
+    # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    NewBookkeepingSystem = bk_2010121301
+    
 
   }
 
