git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@31895 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,6 +14,7 @@ Versions
   
     # NEW: cmt requirements modified
     # CHANGE: AncestorFiles - updated to new BK
+    # BUGFIX: The write job option has been fixed.
     # BUGFIX: The command line methods updated. The file transfer is fixed.
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.   
     # BUGFIX: I removed the pareseCommandline from the client. 
