--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,23 +4,23 @@ Versions
 
   Next Release
   {
-  
-    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.   
-    # BUGFIX: I removed the pareseCommandline from the client. 
+
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
+    # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
     # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
     BookkeepingSystem = bk_2010121301
 
-  
+
     # NEW: cmt requirements modified
     # CHANGE: AncestorFiles - updated to new BK
     # BUGFIX: The write job option has been fixed.
     # BUGFIX: The command line methods updated. The file transfer is fixed.
-    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.   
-    # BUGFIX: I removed the pareseCommandline from the client. 
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
+    # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
     NewBookkeepingSystem = bk_2010121301
-    
+
 
   }
 
@@ -437,6 +437,26 @@ Versions
     # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     WorkloadManagementSystem = wm_2010120601
+  }
+
+  v5r11p2
+  {
+    BookkeepingSystem = bk_2010101301
+    ConfigurationSystem = cs_2010072701
+
+    # NEW: Allow site specific timeouts for SetupProject / LbLogin calls.
+    #      This is configurable in the CS section /Operations/EnvironmentScripts,
+    #      IN2P3 is initially defined with 2* the global default of 600s.
+    Core = co_2010112601
+
+    DataManagementSystem = dm_2010102101
+    Interfaces = if_2010121501
+    ProductionManagementSystem = pm_2010111301
+    ResourceStatusSystem = rs_2010101501
+    SAMSystem = sa_2010080301
+    TransformationSystem = ts_2010112201
+    Workflow = wo_2010121501
+    WorkloadManagementSystem = wm_2010073001
   }
 
   v5r11p1
