--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -444,17 +444,16 @@ Versions
     BookkeepingSystem = bk_2010101301
     ConfigurationSystem = cs_2010072701
 
-    # NEW: Allow site specific timeouts for SetupProject / LbLogin calls.
-    #      This is configurable in the CS section /Operations/EnvironmentScripts,
-    #      IN2P3 is initially defined with 2* the global default of 600s.
     Core = co_2010112601
 
     DataManagementSystem = dm_2010102101
+    #FIX : deleted "dummy" from dataFileMask
     Interfaces = if_2010121801
     ProductionManagementSystem = pm_2010111301
     ResourceStatusSystem = rs_2010101501
     SAMSystem = sa_2010080301
     TransformationSystem = ts_2010112201
+    #FIX : deleted "dummy" from dataFileMask
     Workflow = wo_2010121801
     WorkloadManagementSystem = wm_2010073001
   }
