--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,7 +6,7 @@ Versions
   {
 
   }
-  
+
   v5r12-pre8
   {
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
@@ -503,6 +503,24 @@ Versions
     # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     WorkloadManagementSystem = wm_2010120601
+  }
+
+  v5r11p4
+  {
+    BookkeepingSystem = bk_2010101301
+    ConfigurationSystem = cs_2010072701
+
+    Core = co_2010112601
+
+    DataManagementSystem = dm_2010102101
+    Interfaces = if_2010121801
+    ProductionManagementSystem = pm_2010111301
+    ResourceStatusSystem = rs_2010101501
+    SAMSystem = sa_2010080301
+    TransformationSystem = ts_2010112201
+    #FIX : logical for for filemask
+    Workflow = wo_2010122101
+    WorkloadManagementSystem = wm_2010073001
   }
 
   v5r11p3
