git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32389 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,10 @@ Versions
 
   Next Release
   {
-
+    # CHANGE: I allow the default config name and config version. 
+    BookkeepingSystem = bk_2011011001
+    NewBookkeepingSystem = bk_2011011001
+    
   }
   
   v5r12-pre9
