new Core tag co_2011011101
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32401 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,12 +4,14 @@ Versions
 
   Next Release
   {
-    # CHANGE: I allow the default config name and config version. 
+    # CHANGE: I allow the default config name and config version.
     BookkeepingSystem = bk_2011011001
     NewBookkeepingSystem = bk_2011011001
-    
+    CHANGE: CombinedSoftwareInstallation.py and LocalSoftwareInstallation.py (change option order for install_project)
+    Core = co_2010121901
+
   }
-  
+
   v5r12-pre9
   {
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
@@ -94,7 +96,7 @@ Versions
     # FIX: JobLogUploadAgent updated to use the new SandboxStoreClient
     WorkloadManagementSystem = wm_2010121901
   }
-  
+
 
   v5r12-pre8
   {
