git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32427 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,7 +6,11 @@ Versions
   {
     # CHANGE: I allow the default config name and config version.
     BookkeepingSystem = bk_2011011001
-    NewBookkeepingSystem = bk_2011011001
+    
+    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
+    # CHANGE: I allow the default config name and config version.
+    NewBookkeepingSystem = bk_2011011201
+    
     CHANGE: CombinedSoftwareInstallation.py and LocalSoftwareInstallation.py (change option order for install_project)
     Core = co_2010121901
 
