--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,16 +4,7 @@ Versions
 
   Next Release
   {
-    # CHANGE: I allow the default config name and config version.
-    BookkeepingSystem = bk_2011011001
-    
-    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
-    # CHANGE: I allow the default config name and config version.
-    NewBookkeepingSystem = bk_2011011201
-    
-    CHANGE: CombinedSoftwareInstallation.py and LocalSoftwareInstallation.py (change option order for install_project)
-    Core = co_2010121901
-
+ 
   }
 
   v5r12-pre9
@@ -24,7 +15,8 @@ Versions
     # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
     # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
-    BookkeepingSystem = bk_2010121301
+    # CHANGE: allow the default config name and config version.
+    BookkeepingSystem = bk_2011011001
 
     # NEW: cmt requirements modified
     # CHANGE: AncestorFiles - updated to new BK
@@ -37,15 +29,18 @@ Versions
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
     # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
-    NewBookkeepingSystem = bk_2010121301
+    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
+    # CHANGE: allow the default config name and config version.
+    NewBookkeepingSystem = bk_2011011201
 
     ConfigurationSystem = cs_2010072701
 
     # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
-    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # FIX: scripts - removed obsoleted __VERSION__ variable, updated to the new style
     # CHANGE: dirac-lhcb-generate-catalog script updated to new BK
     # FIX: lhcb-proxy-init.py - add the vo has parameter of setVOMSAttributes ( Joel Closier )
-    Core = co_2010121901
+    # CHANGE: CombinedSoftwareInstallation.py and LocalSoftwareInstallation.py (change option order for install_project) (Joel Closier)
+    Core = co_2011011201
 
     # CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
     # NEW: Added new StorageSummaryAgent
@@ -61,10 +56,10 @@ Versions
     # CHANGE: DiracLHCb, Production updated to new BK
     Interfaces = if_2010120701
 
-    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # FIX: scripts - removed obsoleted __VERSION__ variable, updated to the new style
     # CHANGE: multiple scripts updated to new BK
     # NEW: RequestTrackingAgent, ProdufctionRequestDB - step based requests support
-    ProductionManagementSystem = pm_2010121901
+    ProductionManagementSystem = pm_2011011201
 
     # BUFIX: Configurations.py - removed OnNodePropagation policy
     ResourceStatusSystem = rs_2010120601
@@ -74,7 +69,7 @@ Versions
     SAMSystem = sa_2010121901
 
     # CHANGE: BookkeepingWatchAgent - add file metadata by smal chunks as they are retrieved from the BK
-    # FIX: TransformationPlugin - correctly handle the case where the runID is null for a transformation
+    # FIX: TransformationPlugin - define a list of destination SEs to submit one replication task per file
     # NEW: TransformationDB - added setBookkeepingQueryStartRunForTransformation() for throttling the
     #      reprocessing activity; transformationID should be an integer when creating new tasks;
     #      correctly handle the case where the runID is null when adding tasks to a transformation
@@ -83,7 +78,7 @@ Versions
     # FIX: TransformationManager - added protection against non-existant (zero) run numbers
     # FIX: DataRecoveryAgent - updated for the modified Transformation System
     # FIX: TransformationCleaningAgent - added missing import of StorageUsageClient
-    TransformationSystem = ts_2011010401
+    TransformationSystem = ts_2011011201
 
     # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
     # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location.
@@ -92,6 +87,7 @@ Versions
     # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
     # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
     # CHANGE: Modules and Templates updated to new BK
+    # NEW: TEST_ReStripping_run.py - new restripping template
     Workflow = wo_2010120701
 
     # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
