--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,6 +9,10 @@ Versions
 
   v5r12-pre9
   {
+  
+    # NEW: Accounting LHCb specific extensions to deal with the Storage Usage data
+    AccountingSystem = ac_2011011301
+  
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
     # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
@@ -48,7 +52,8 @@ Versions
     # NEW: UserStorageAgent - self.activePeriod = self.am_getOption( 'ActivePeriod', 0 )
     #      required by the latest version of the execute method of the StorageUsageAgent
     # CHANGE: scripts dirac-dms-get-storage-directories, -storage-usage-summary are moved here from DIRAC core
-    DataManagementSystem = dm_2010121901
+    # NEW: StorageUsage agents to support storage usage accounting
+    DataManagementSystem = dm_2011011301
 
     # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
     # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
