Added a new release to DataManagement
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32533 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,16 @@ Versions
 
   Next Release
   {
+  	# CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
+    # NEW: Added new StorageSummaryAgent
+    # FIX: TargzJobLogAgent - LogPath -> LogPathList
+    # NEW: UserStorageAgent - self.activePeriod = self.am_getOption( 'ActivePeriod', 0 )
+    #      required by the latest version of the execute method of the StorageUsageAgent
+    # CHANGE: scripts dirac-dms-get-storage-directories, -storage-usage-summary are moved here from DIRAC core
+    # NEW: StorageUsage agents to support storage usage accounting
+	# NEW: Download owner proxy to remove directories
+	# NEW: Allow to remove more than one directory at the same time to the StorageUsageDB
+    DataManagementSystem = dm_2011011302
  
   }
 
