--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,17 +4,101 @@ Versions
 
   Next Release
   {
-  	# CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
+ 
+  }
+  
+  v5r12-pre10
+  {
+  
+    # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
+    # BUGFIX: I removed the pareseCommandline from the client.
+    # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
+    # CHANGE: allow the default config name and config version.
+    BookkeepingSystem = bk_2011011001
+
+    # NEW: cmt requirements modified
+    # CHANGE: AncestorFiles - updated to new BK
+    # BUGFIX: The command line methods updated. The file transfer is fixed.
+    # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # NEW: cmt requirements modified
+    # CHANGE: AncestorFiles - updated to new BK
+    # BUGFIX: The write job option has been fixed.
+    # BUGFIX: The command line methods updated. The file transfer is fixed.
+    # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
+    # BUGFIX: I removed the pareseCommandline from the client.
+    # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
+    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
+    # CHANGE: allow the default config name and config version.
+    NewBookkeepingSystem = bk_2011011201
+
+    ConfigurationSystem = cs_2010072701
+
+    # CHANGE: CombinedSoftwareInstallation.py - Minor bug fix to handle slc4_amd64 case after testing in development.
+    # FIX: scripts - removed obsoleted __VERSION__ variable, updated to the new style
+    # CHANGE: dirac-lhcb-generate-catalog script updated to new BK
+    # FIX: lhcb-proxy-init.py - add the vo has parameter of setVOMSAttributes ( Joel Closier )
+    # CHANGE: CombinedSoftwareInstallation.py and LocalSoftwareInstallation.py (change option order for install_project) (Joel Closier)
+    Core = co_2011011201
+
+    # CHANGE: multiple agents use  self.am_setOption( 'shifterProxy', 'DataManager' )
     # NEW: Added new StorageSummaryAgent
     # FIX: TargzJobLogAgent - LogPath -> LogPathList
     # NEW: UserStorageAgent - self.activePeriod = self.am_getOption( 'ActivePeriod', 0 )
     #      required by the latest version of the execute method of the StorageUsageAgent
     # CHANGE: scripts dirac-dms-get-storage-directories, -storage-usage-summary are moved here from DIRAC core
     # NEW: StorageUsage agents to support storage usage accounting
-	# NEW: Download owner proxy to remove directories
-	# NEW: Allow to remove more than one directory at the same time to the StorageUsageDB
+    # NEW: Download owner proxy to remove directories
+    # NEW: Allow to remove more than one directory at the same time to the StorageUsageDB
     DataManagementSystem = dm_2011011302
- 
+
+    # CHANGE: Production.py - Updated to work with the new BK step organisation, more refactoring is possible.
+    # BUGFIX: Production.py - Minor fix for case where inputProductions are no longer specified for DaVinci merging. The processing pass info is now coming from the chain of steps in the BK.
+    # NEW: new dirac-admin-grid-weather command
+    # CHANGE: DiracLHCb, Production updated to new BK
+    Interfaces = if_2010120701
+
+    # FIX: scripts - removed obsoleted __VERSION__ variable, updated to the new style
+    # CHANGE: multiple scripts updated to new BK
+    # NEW: RequestTrackingAgent, ProdufctionRequestDB - step based requests support
+    ProductionManagementSystem = pm_2011011201
+
+    # BUFIX: Configurations.py - removed OnNodePropagation policy
+    ResourceStatusSystem = rs_2010120601
+
+    # FIX: SAMAgent - use self.am_setOption( 'shifterProxy', 'SAMManager' )
+    # FIX: SoftwareInstallation - implement the same hack for IN2P3 as for CERN (Joel Closier)
+    SAMSystem = sa_2010121901
+
+    # CHANGE: BookkeepingWatchAgent - add file metadata by smal chunks as they are retrieved from the BK
+    # FIX: TransformationPlugin - define a list of destination SEs to submit one replication task per file
+    # NEW: TransformationDB - added setBookkeepingQueryStartRunForTransformation() for throttling the
+    #      reprocessing activity; transformationID should be an integer when creating new tasks;
+    #      correctly handle the case where the runID is null when adding tasks to a transformation
+    # FIX: scripts - removed obsoleted __VERSION__ variable
+    # CHANGE: Agents, Clients updated to new BK
+    # FIX: TransformationManager - added protection against non-existant (zero) run numbers
+    # FIX: DataRecoveryAgent - updated for the modified Transformation System
+    # FIX: TransformationCleaningAgent - added missing import of StorageUsageClient
+    TransformationSystem = ts_2011011201
+
+    # CHANGE: MC_Simulation_run.py - Updated to work with the new BK step organisation.
+    # CHANGE: Certification_Testing_run.py -  Updated to work with the new BK step organisation.  Moved CS location to a setup dependent location.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    # CHANGE: MicroDST_StreamedData_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: FULL_RealData_Merging_run.py -  Updated to work with the new BK step organisation.
+    # CHANGE: EXPRESS_RealData_run.py -  Adapted to work with BK step reorganisation, also switch to SimCond if a test is being carried out, eagerly anticipating generic Condition for the BK query.
+    # CHANGE: Modules and Templates updated to new BK
+    # NEW: TEST_ReStripping_run.py - new restripping template
+    Workflow = wo_2010120701
+
+    # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
+    # CHANGE: AncestorFilesAgent updated to new BK
+    # FIX: JobLogUploadAgent updated to use the new SandboxStoreClient
+    WorkloadManagementSystem = wm_2010121901
   }
 
   v5r12-pre9
